# AIZEN-AI

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  start-aizen.ps1
.github/workflows/: ci.yml
backend/: .env.example  README.md  migrate_to_supabase.py  pyproject.toml  requirements-ci.txt  requirements.txt  server.py  supabase_schema.sql  test_enhanced_features.py  test_integration.py  test_rag.py  test_system_operations.py  test_system_ops_quick.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  models.py  routes.py  system_routes.py  websocket.py
backend/app/core/: audit_logger.py  backup.py  brain.py  cache.py  connection_pool.py  conversation_namer.py  executor.py  memory.py  metrics.py  model_router.py  planner.py  rate_limiter.py  security_manager.py  supabase.py  system_controller.py  system_executor.py  system_tools.py
backend/app/memory/: __init__.py  conversation.py  core_memory.py  history_manager.py  rag_manager.py  reranker.py  smart_memory.py  vector_store.py
backend/app/system/: __init__.py  desktop_automation.py  file_operations.py  process_manager.py  registry_operations.py  system_info.py
backend/app/tools/: __init__.py  base.py  calendar.py  code_exec.py  file_ops.py  system.py  web_search.py
backend/tests/: conftest.py  test_core.py
docs/dev-notes/: AIZEN_COMPLETE_OVERVIEW.md  AIZEN_DEBUG_COMPLETE.md  AIZEN_DEEP_AUDIT.md  AIZEN_FIXES_FINAL.md  AIZEN_MASTER_GUIDE.md  AUDIT_REPORT.md  BEFORE_AFTER_COMPARISON.md  (+26 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
(+42 files in other folders)
